# Python-Project-todo

./: README.md
todo/: pyproject.toml
todo/todo/: main.py
