[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["bilal301 <bilal301github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
 
[tool.poetry.scripts]
dev= "todo.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
